--- a/content/w12.html
+++ b/content/w12.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='網路設定.html'>網路設定</a></li></ul><li><a href='PMS.html'>PMS</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms.html'>pms</a></li></ul><li class='has-children'><a href='OBS.html'>OBS</a><ul class='dropdown'><li><a href='solidworks.html'>solidworks</a></li></ul><li class='has-children'><a href='NOTE.html'>NOTE</a><ul class='dropdown'><li><a href='Exam.html'>Exam</a><li><a href='s1511.html'>s1511</a><li><a href='Replit.html'>Replit</a><li><a href='Internet Set.html'>Internet Set</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='exam.html'>exam</a><ul class='dropdown'><li><a href='wink.html'>wink</a></li></ul><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='網路設定.html'>網路設定</a></li></ul><li><a href='PMS.html'>PMS</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms.html'>pms</a></li></ul><li class='has-children'><a href='OBS.html'>OBS</a><ul class='dropdown'><li><a href='solidworks.html'>solidworks</a></li></ul><li class='has-children'><a href='NOTE.html'>NOTE</a><ul class='dropdown'><li><a href='Exam.html'>Exam</a><li><a href='s1511.html'>s1511</a><li><a href='Replit.html'>Replit</a><li><a href='Internet Set.html'>Internet Set</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='網路設定.html'>Next</a> >> 網路設定<br /><h1>w12</h1>
+    <div id="tipue_search_content">wink << <a href='wink.html'>Previous</a> <a href='網路設定.html'>Next</a> >> 網路設定<br /><h1>w12</h1>
 <p>用python程式讀取<a href="./../downloads/2a_w12_seat.txt">2a_w12_seat.txt</a>排出座位表(<a href="./../downloads/w12.py">w12.py</a>)：</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">file_path = "2a_w12_seat.txt"
 
@@ -182,7 +182,7 @@ for row in seat_table:
 for row in seat_table:
     print("\t".join(row))</pre>
 <p></p>
-<br />About << <a href='About.html'>Previous</a> <a href='網路設定.html'>Next</a> >> 網路設定</div>
+<br />wink << <a href='wink.html'>Previous</a> <a href='網路設定.html'>Next</a> >> 網路設定</div>
         
     <!-- footer -->
       <div class="container">
