--- a/content/網路設定.html
+++ b/content/網路設定.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='網路設定.html'>網路設定</a></li></ul><li><a href='PMS.html'>PMS</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms.html'>pms</a></li></ul><li class='has-children'><a href='OBS.html'>OBS</a><ul class='dropdown'><li><a href='solidworks.html'>solidworks</a></li></ul><li class='has-children'><a href='NOTE.html'>NOTE</a><ul class='dropdown'><li><a href='Exam.html'>Exam</a><li><a href='s1511.html'>s1511</a><li><a href='Replit.html'>Replit</a><li><a href='Internet Set.html'>Internet Set</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='exam.html'>exam</a><ul class='dropdown'><li><a href='wink.html'>wink</a></li></ul><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='網路設定.html'>網路設定</a></li></ul><li><a href='PMS.html'>PMS</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms.html'>pms</a></li></ul><li class='has-children'><a href='OBS.html'>OBS</a><ul class='dropdown'><li><a href='solidworks.html'>solidworks</a></li></ul><li class='has-children'><a href='NOTE.html'>NOTE</a><ul class='dropdown'><li><a href='Exam.html'>Exam</a><li><a href='s1511.html'>s1511</a><li><a href='Replit.html'>Replit</a><li><a href='Internet Set.html'>Internet Set</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -156,7 +156,8 @@ var winkVideoData = {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/w13/w13.mp4"/></video></div>
-<p></p><br />w12 << <a href='w12.html'>Previous</a> <a href='PMS.html'>Next</a> >> PMS</div>
+<p></p>
+<br />w12 << <a href='w12.html'>Previous</a> <a href='PMS.html'>Next</a> >> PMS</div>
         
     <!-- footer -->
       <div class="container">
